# GlobalSpeechToText

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: funcoes.py  main.py
